{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 10,
  "lineage": "1cf5c133-74f1-6904-12ca-d2668fce2119",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway",
      "name": "example_tgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "amazon_side_asn": 64512,
            "arn": "arn:aws:ec2:us-west-2:418295724334:transit-gateway/tgw-0ad2af1723d77d4e7",
            "association_default_route_table_id": "tgw-rtb-0f50a025d4b063226",
            "auto_accept_shared_attachments": "disable",
            "default_route_table_association": "enable",
            "default_route_table_propagation": "enable",
            "description": "Example Transit Gateway",
            "dns_support": "enable",
            "id": "tgw-0ad2af1723d77d4e7",
            "multicast_support": "disable",
            "owner_id": "418295724334",
            "propagation_default_route_table_id": "tgw-rtb-0f50a025d4b063226",
            "security_group_referencing_support": "disable",
            "tags": {
              "Name": "Example-Transit-Gateway"
            },
            "tags_all": {
              "Name": "Example-Transit-Gateway"
            },
            "vpn_ecmp_support": "enable"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "project_a_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "project_b_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "project_a_to_b_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.1.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-09c860e6571760b603322942084",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09c860e6571760b60",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0532167072eb2e748"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.project_a_vpc",
            "aws_vpc.project_b_vpc",
            "aws_vpc_peering_connection.peer_a_to_b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "project_b_to_a_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c23790d95fe916f6179966490",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c23790d95fe916f6",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0532167072eb2e748"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.project_a_vpc",
            "aws_vpc.project_b_vpc",
            "aws_vpc_peering_connection.peer_a_to_b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "project_a_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:418295724334:security-group/sg-010f195274e613b2e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-010f195274e613b2e",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.1.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240929133708321600000002",
            "name_prefix": "terraform-",
            "owner_id": "418295724334",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ProjectA-SG"
            },
            "tags_all": {
              "Name": "ProjectA-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-07a67f75829f46192"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.project_a_vpc",
            "aws_vpc.project_b_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "project_b_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:418295724334:security-group/sg-0525d7302e8e92d82",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0525d7302e8e92d82",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240929133708321400000001",
            "name_prefix": "terraform-",
            "owner_id": "418295724334",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ProjectB-SG"
            },
            "tags_all": {
              "Name": "ProjectB-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d9374b3feaa8b86d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.project_a_vpc",
            "aws_vpc.project_b_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "project_a_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:418295724334:subnet/subnet-07bbd12a279a925ff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07bbd12a279a925ff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "418295724334",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ProjectA-PublicSubnet"
            },
            "tags_all": {
              "Name": "ProjectA-PublicSubnet"
            },
            "vpc_id": "vpc-07a67f75829f46192"
          },
          "dependencies": [
            "aws_vpc.project_a_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "project_b_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:418295724334:subnet/subnet-041c74340000ccf4b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-041c74340000ccf4b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "418295724334",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ProjectB-PublicSubnet"
            },
            "tags_all": {
              "Name": "ProjectB-PublicSubnet"
            },
            "vpc_id": "vpc-0d9374b3feaa8b86d"
          },
          "dependencies": [
            "aws_vpc.project_b_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "project_a_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:418295724334:vpc/vpc-07a67f75829f46192",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04223d2cfe6eb186f",
            "default_route_table_id": "rtb-09c860e6571760b60",
            "default_security_group_id": "sg-0e5b2ffc4bf2cb948",
            "dhcp_options_id": "dopt-0013d916a1ced2d54",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07a67f75829f46192",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09c860e6571760b60",
            "owner_id": "418295724334",
            "tags": {
              "Name": "ProjectA-VPC"
            },
            "tags_all": {
              "Name": "ProjectA-VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "project_b_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:418295724334:vpc/vpc-0d9374b3feaa8b86d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-09d548f4fdc6e4474",
            "default_route_table_id": "rtb-0c23790d95fe916f6",
            "default_security_group_id": "sg-0e609cc01b48ae191",
            "dhcp_options_id": "dopt-0013d916a1ced2d54",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d9374b3feaa8b86d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c23790d95fe916f6",
            "owner_id": "418295724334",
            "tags": {
              "Name": "ProjectB-VPC"
            },
            "tags_all": {
              "Name": "ProjectB-VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "peer_a_to_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-0532167072eb2e748",
            "peer_owner_id": "418295724334",
            "peer_region": "us-west-2",
            "peer_vpc_id": "vpc-0d9374b3feaa8b86d",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "Name": "Peer-ProjectA-to-ProjectB"
            },
            "tags_all": {
              "Name": "Peer-ProjectA-to-ProjectB"
            },
            "vpc_id": "vpc-07a67f75829f46192"
          },
          "dependencies": [
            "aws_vpc.project_a_vpc",
            "aws_vpc.project_b_vpc"
          ]
        }
      ]
    }
  ]
}